# routes/userRoutes.js
@@ -1,8 +1,8 @@
 const express = require('express');
-const { createUser, getUsers, getUserById, updateUser, deleteUser } = require('../controllers/userController');
+const { createUser, getUsers, getUserById, updateUser, UpdatingUser, deleteUser } = require('../controllers/userController');
 const router = express.Router();
 
-router.post('/user', (req, res) => {
+router.post('/CreateUser', (req, res) => {
     // #swagger.tags = ['Users']
     createUser(req, res);
 });
@@ -12,17 +12,22 @@ router.get('/GetAllusers', (req, res) => {
     getUsers(req, res);
 });
 
-router.get('/users/:id', (req, res) => {
+router.get('/GetUserByID/:id', (req, res) => {
     // #swagger.tags = ['Users']
     getUserById(req, res);
 });
 
-router.put('/users/:id', (req, res) => {
+router.put('/UpdateUser/:id', (req, res) => {
     // #swagger.tags = ['Users']
     updateUser(req, res);
 });
 
-router.delete('/users/:id', (req, res) => {
+router.patch('/UpdateUser/:id', (req, res) => {
+    // #swagger.tags = ['Users']
+    UpdatingUser(req, res);
+});
+
+router.delete('/DeleteUser/:id', (req, res) => {
     // #swagger.tags = ['Users']
     deleteUser(req, res);
 });
